Change all references from Md Jahid Hasan Jone to Chinmoy Dev Nath

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="navbar">
-            <div class="navbar-title">Md Jahid Hasan Jone</div>
+            <div class="navbar-title">Chinmoy Dev Nath</div>
             <nav>
                 <a class="active" href="#">Home</a>
                 <a href="#">Education</a>
@@ -115,7 +115,7 @@
             <a href="#"><i class="fab fa-researchgate"></i></a>
             <a href="#"><i class="fab fa-orcid"></i></a>
         </div>
-        <div class="footer-text">© 2024 Md Jahid Hasan Jone. All rights reserved.</div>
+        <div class="footer-text">© 2024 Chinmoy Dev Nath. All rights reserved.</div>
     </footer>
     <script src="script.js"></script>
 </body>
