Update profile section with new title and lab information for Chinmoy Dev Nath

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <img class="profile-img" src="PIC CHINMOY.jpg" alt="Md Jahid Hasan Jone">
             <div class="profile-info">
                 <h1>Chinmoy Dev Nath</h1>
-                <div class="subtitle">Plant Breeding Graduate | Research Associate</div>
-                <div class="lab">Plant Molecular Breeding and Bioinformatics Laboratory<br>Bangladesh Agricultural University, Mymensingh</div>
+                <div class="subtitle">DVM, MS Fellow (Veterinary Public Health & Food Hygiene) | Research Associate</div>
+                <div class="lab">MPS Molecular Biology and Nanotechnology Lab<br>Bangladesh Agricultural University, Mymensingh</div>
                 <div class="contact">
                     <div><i class="fa fa-phone"></i> +88-01794731195</div>
                     <div><i class="fa fa-envelope"></i> hasanjahid1104@gmail.com</div>
