Update contact information for Chinmoy Dev Nath

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <div class="subtitle">DVM, MS Fellow (Veterinary Public Health & Food Hygiene) | Research Associate</div>
                 <div class="lab">MPS Molecular Biology and Nanotechnology Lab<br>Bangladesh Agricultural University, Mymensingh</div>
                 <div class="contact">
-                    <div><i class="fa fa-phone"></i> +88-01794731195</div>
-                    <div><i class="fa fa-envelope"></i> hasanjahid1104@gmail.com</div>
-                    <div><i class="fa fa-envelope"></i> jahid.1802049@bau.edu.bd</div>
+                    <div><i class="fa fa-phone"></i> +88-01898757878</div>
+                    <div><i class="fa fa-envelope"></i> chinmoydevnath73@gmail.com</div>
+                    <div><i class="fa fa-envelope"></i> chinmoy.1901073@bau.edu.bd</div>
                 </div>
                 <div class="social-icons">
                     <a href="#"><i class="fab fa-linkedin"></i></a>
