--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                     <div><i class="fa fa-envelope"></i> chinmoy.1901073@bau.edu.bd</div>
                 </div>
                 <div class="social-icons">
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                    <a href="#"><i class="fab fa-github"></i></a>
-                    <a href="#"><i class="fab fa-medium"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-researchgate"></i></a>
-                    <a href="#"><i class="fab fa-orcid"></i></a>
+                    <a href="https://linkedin.com/in/chinmoy-dev-nath-dvm-3a0859193" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://medium.com/@chinmoydevnath73" target="_blank"><i class="fab fa-medium"></i></a>
+                    <a href="https://www.youtube.com/@chinmoydevnath9353" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a href="https://facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://twitter.com/ChinmoyNat66235" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.researchgate.net/profile/Chinmoy-Dev-Nath" target="_blank"><i class="fab fa-researchgate"></i></a>
+                    <a href="https://orcid.org/0009-0009-6330-0231" target="_blank"><i class="fab fa-orcid"></i></a>
                 </div>
             </div>
         </section>
@@ -106,14 +106,14 @@
     </main>
     <footer>
         <div class="footer-social">
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-medium"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-researchgate"></i></a>
-            <a href="#"><i class="fab fa-orcid"></i></a>
+            <a href="https://linkedin.com/in/chinmoy-dev-nath-dvm-3a0859193" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://medium.com/@chinmoydevnath73" target="_blank"><i class="fab fa-medium"></i></a>
+            <a href="https://www.youtube.com/@chinmoydevnath9353" target="_blank"><i class="fab fa-youtube"></i></a>
+            <a href="https://facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/ChinmoyNat66235" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.researchgate.net/profile/Chinmoy-Dev-Nath" target="_blank"><i class="fab fa-researchgate"></i></a>
+            <a href="https://orcid.org/0009-0009-6330-0231" target="_blank"><i class="fab fa-orcid"></i></a>
         </div>
         <div class="footer-text">© 2024 Chinmoy Dev Nath. All rights reserved.</div>
     </footer>
