Add research interests bulleted list

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
       <p class="biography-text">His research explores bacterial pathogenesis, molecular and cellular biology, antibiotic resistance mechanisms, zoonotic disease transmission, and metagenomic analysis. He integrates next-generation sequencing, bioinformatics, and epidemiological tools to investigate microbial threats at the human–animal–environment interface through the One Health framework.</p>
       <p class="biography-text">Dr. Nath is driven by data-focused, interdisciplinary collaboration to address local and global health challenges. He is actively seeking advanced research and training opportunities abroad to strengthen his contributions in infectious disease epidemiology, genomic surveillance, and public health innovation.</p>
             <h3>Research Interest</h3>
+            <ul class="research-interests">
+                <li>Genomic and metagenomic analysis of zoonotic and antimicrobial-resistant pathogens</li>
+                <li>Functional genomics and transcriptomics to study bacterial virulence and resistance mechanisms</li>
+                <li>One Health-based molecular epidemiology of emerging infectious diseases</li>
+                <li>Bioinformatics and data-driven approaches for pathogen surveillance and public health risk assessment</li>
+            </ul>
         </section>
         <section class="highlights-section" id="experiences">
             <div class="section-title">HIGHLIGHTS</div>
