Add and align Biography and Research Interest headings with consistent styling

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             </div>
         </section>
         <section class="bio-section" id="education">
-            <h2></h2>
+            <h2 class="bio-section-title">Biography</h2>
       <p class="biography-text">Dr. Chinmoy Dev Nath is a public health researcher with expertise in microbiology, genomics, epidemiology, and the One Health approach. He earned his DVM from Bangladesh Agricultural University (2019–2025) and is currently pursuing a Master's in Public Health under Professor Dr. Mahbubul Pratik Siddique. Since March 2025, he has served as a graduate research assistant at the MPS Molecular Biology and Nanotechnology Lab, focusing on molecular and genomic research in public health.</p>
       <p class="biography-text">His research explores bacterial pathogenesis, molecular and cellular biology, antibiotic resistance mechanisms, zoonotic disease transmission, and metagenomic analysis. He integrates next-generation sequencing, bioinformatics, and epidemiological tools to investigate microbial threats at the human–animal–environment interface through the One Health framework.</p>
       <p class="biography-text">Dr. Nath is driven by data-focused, interdisciplinary collaboration to address local and global health challenges. He is actively seeking advanced research and training opportunities abroad to strengthen his contributions in infectious disease epidemiology, genomic surveillance, and public health innovation.</p>
-            <h3>Research Interest</h3>
+            <h2 class="bio-section-title">Research Interest</h2>
             <ul class="research-interests">
                 <li>Genomic and metagenomic analysis of zoonotic and antimicrobial-resistant pathogens</li>
                 <li>Functional genomics and transcriptomics to study bacterial virulence and resistance mechanisms</li>
