Add editable Education section with professional styling and auto-save functionality

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="navbar-title">Chinmoy Dev Nath</div>
             <nav>
                 <a class="active" href="#">Home</a>
-                <a href="#">Education</a>
+                <a href="#education">Education</a>
                 <a href="#">Experiences</a>
                 <a href="#">Projects</a>
                 <a href="#">Publications</a>
@@ -60,6 +60,35 @@
                 <li>One Health-based molecular epidemiology of emerging infectious diseases</li>
                 <li>Bioinformatics and data-driven approaches for pathogen surveillance and public health risk assessment</li>
             </ul>
+        </section>
+        <section class="education-section" id="education">
+            <div class="section-title">EDUCATION</div>
+            <div class="education-content">
+                <div class="education-item">
+                    <div class="education-header">
+                        <h3 class="degree-title" contenteditable="true">Doctor of Veterinary Medicine (DVM)</h3>
+                        <span class="education-year" contenteditable="true">2019-2025</span>
+                    </div>
+                    <div class="institution" contenteditable="true">Bangladesh Agricultural University, Mymensingh</div>
+                    <div class="education-description" contenteditable="true">Specialized in Veterinary Public Health & Food Hygiene</div>
+                </div>
+                <div class="education-item">
+                    <div class="education-header">
+                        <h3 class="degree-title" contenteditable="true">Master's in Public Health (MPH)</h3>
+                        <span class="education-year" contenteditable="true">2025-Present</span>
+                    </div>
+                    <div class="institution" contenteditable="true">Bangladesh Agricultural University, Mymensingh</div>
+                    <div class="education-description" contenteditable="true">Under the mentorship of Professor Dr. Mahbubul Pratik Siddique</div>
+                </div>
+                <div class="education-item">
+                    <div class="education-header">
+                        <h3 class="degree-title" contenteditable="true">Additional Certifications</h3>
+                        <span class="education-year" contenteditable="true">2024</span>
+                    </div>
+                    <div class="institution" contenteditable="true">Online Course</div>
+                    <div class="education-description" contenteditable="true">Data Analysis & Visualization Using R</div>
+                </div>
+            </div>
         </section>
         <section class="highlights-section" id="experiences">
             <div class="section-title">HIGHLIGHTS</div>
