Add JSC education entry with Board and Institution details

--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
                 </div>
                 <div class="education-item">
                     <div class="education-header">
+                        <h3 class="degree-title" contenteditable="true">Junior School Certificate (JSC)</h3>
+                        <span class="education-year" contenteditable="true">2013</span>
+                    </div>
+                    <div class="board" contenteditable="true">Chattogram</div>
+                    <div class="institution" contenteditable="true">Rangunia Public School & College</div>
+                    <div class="education-description" contenteditable="true">GPA: 5.00/5.00 | Achievement: Education Board Scholarship (Talent Pool Category)</div>
+                </div>
+                <div class="education-item">
+                    <div class="education-header">
                         <h3 class="degree-title" contenteditable="true">Additional Certifications</h3>
                         <span class="education-year" contenteditable="true">2024</span>
                     </div>
