--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
                         <h3 class="degree-title" contenteditable="true">Junior School Certificate (JSC)</h3>
                         <span class="education-year" contenteditable="true">2013</span>
                     </div>
-                    <div class="board" contenteditable="true">Chattogram</div>
+                    <div class="board" contenteditable="true">
+                        <a href="https://bise-ctg.portal.gov.bd/" target="_blank" class="board-link">
+                            <i class="fas fa-external-link-alt"></i> Chattogram
+                        </a>
+                    </div>
                     <div class="institution" contenteditable="true">Rangunia Public School & College</div>
                     <div class="education-description" contenteditable="true">GPA: 5.00/5.00 | Achievement: Education Board Scholarship (Talent Pool Category)</div>
                 </div>
