Fix navigation links and add smooth scrolling

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
         <div class="navbar">
             <div class="navbar-title">Chinmoy Dev Nath</div>
             <nav>
-                <a class="active" href="#">Home</a>
+                <a class="active" href="#home">Home</a>
+                <a href="#biography">Biography</a>
                 <a href="#education">Education</a>
-                <a href="#">Experiences</a>
-                <a href="#">Projects</a>
-                <a href="#">Publications</a>
-                <a href="#">More <i class="fa fa-caret-down"></i></a>
+                <a href="#experiences">Experiences</a>
+                <a href="#projects">Projects</a>
+                <a href="#publications">Publications</a>
+                <a href="#more">More <i class="fa fa-caret-down"></i></a>
             </nav>
         </div>
     </header>
@@ -48,7 +49,7 @@
                 </div>
             </div>
         </section>
-        <section class="bio-section" id="education">
+        <section class="bio-section" id="biography">
             <h2 class="bio-section-title">Biography</h2>
       <p class="biography-text">Dr. Chinmoy Dev Nath is a public health researcher with expertise in microbiology, genomics, epidemiology, and the One Health approach. He earned his DVM from Bangladesh Agricultural University (2019–2025) and is currently pursuing a Master's in Public Health under Professor Dr. Mahbubul Pratik Siddique. Since March 2025, he has served as a graduate research assistant at the MPS Molecular Biology and Nanotechnology Lab, focusing on molecular and genomic research in public health.</p>
       <p class="biography-text">His research explores bacterial pathogenesis, molecular and cellular biology, antibiotic resistance mechanisms, zoonotic disease transmission, and metagenomic analysis. He integrates next-generation sequencing, bioinformatics, and epidemiological tools to investigate microbial threats at the human–animal–environment interface through the One Health framework.</p>
