Fix navigation with simplified JavaScript and add missing More section

--- a/index.html
+++ b/index.html
@@ -152,6 +152,12 @@
                 </div>
             </div>
         </section>
+        <section class="more-section" id="more">
+            <div class="section-title">MORE</div>
+            <div class="more-content">
+                <p>Additional information and resources will be added here.</p>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="footer-social">
