Complete website structure with all More section pages: Skills, Trainings, Conferences, Honors, Affiliations, References, and Contact

--- a/biography.html
+++ b/biography.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chinmoy Dev Nath</title>
+    <title>Biography - Chinmoy Dev Nath</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,8 +15,8 @@
         <div class="navbar">
             <div class="navbar-title">Chinmoy Dev Nath</div>
             <nav>
-                <a class="active" href="index.html">Home</a>
-                <a href="biography.html">Biography</a>
+                <a href="index.html">Home</a>
+                <a href="biography.html" class="active">Biography</a>
                 <a href="education.html">Education</a>
                 <a href="experiences.html">Experiences</a>
                 <a href="projects.html">Projects</a>
@@ -26,29 +26,6 @@
         </div>
     </header>
     <main>
-        <section class="profile-section" id="home">
-            <img class="profile-img" src="PIC CHINMOY.jpg" alt="Md Jahid Hasan Jone">
-            <div class="profile-info">
-                <h1>Chinmoy Dev Nath</h1>
-                <div class="subtitle">DVM, MS Fellow (Veterinary Public Health & Food Hygiene) | Research Associate</div>
-                <div class="lab">MPS Molecular Biology and Nanotechnology Lab<br>Bangladesh Agricultural University, Mymensingh</div>
-                <div class="contact">
-                    <div><i class="fa fa-phone"></i> +88-01898757878</div>
-                    <div><i class="fa fa-envelope"></i> chinmoydevnath73@gmail.com</div>
-                    <div><i class="fa fa-envelope"></i> chinmoy.1901073@bau.edu.bd</div>
-                </div>
-                <div class="social-icons">
-                    <a href="https://linkedin.com/in/chinmoy-dev-nath-dvm-3a0859193" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://medium.com/@chinmoydevnath73" target="_blank"><i class="fab fa-medium"></i></a>
-                    <a href="https://www.youtube.com/@chinmoydevnath9353" target="_blank"><i class="fab fa-youtube"></i></a>
-                    <a href="https://facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="https://twitter.com/ChinmoyNat66235" target="_blank"><i class="fab fa-twitter"></i></a>
-                    <a href="https://www.researchgate.net/profile/Chinmoy-Dev-Nath" target="_blank"><i class="fab fa-researchgate"></i></a>
-                    <a href="https://orcid.org/0009-0009-6330-0231" target="_blank"><i class="fab fa-orcid"></i></a>
-                </div>
-            </div>
-        </section>
         <section class="bio-section">
             <h2 class="bio-section-title">Biography</h2>
             <p class="biography-text">Dr. Chinmoy Dev Nath is a public health researcher with expertise in microbiology, genomics, epidemiology, and the One Health approach. He earned his DVM from Bangladesh Agricultural University (2019–2025) and is currently pursuing a Master's in Public Health under Professor Dr. Mahbubul Pratik Siddique. Since March 2025, he has served as a graduate research assistant at the MPS Molecular Biology and Nanotechnology Lab, focusing on molecular and genomic research in public health.</p>
