Simplify navigation: Remove dropdown, use More page as hub for Skills, Trainings, Conferences, Honors, Affiliations, References, Contact

--- a/more.html
+++ b/more.html
@@ -32,17 +32,17 @@
                     <a href="skills.html" class="more-item">
                         <i class="fas fa-tools"></i>
                         <h3>Skills</h3>
-                        <p>Technical, research, and software skills</p>
+                        <p>Technical and research skills</p>
                     </a>
                     <a href="trainings.html" class="more-item">
                         <i class="fas fa-certificate"></i>
                         <h3>Trainings & Certifications</h3>
-                        <p>Professional development and certifications</p>
+                        <p>Professional development</p>
                     </a>
                     <a href="conferences.html" class="more-item">
                         <i class="fas fa-users"></i>
                         <h3>Conferences & Seminars</h3>
-                        <p>Academic presentations and participation</p>
+                        <p>Academic presentations</p>
                     </a>
                     <a href="honors.html" class="more-item">
                         <i class="fas fa-trophy"></i>
@@ -52,17 +52,17 @@
                     <a href="affiliations.html" class="more-item">
                         <i class="fas fa-handshake"></i>
                         <h3>Professional Affiliations</h3>
-                        <p>Memberships and organizational involvement</p>
+                        <p>Memberships</p>
                     </a>
                     <a href="references.html" class="more-item">
                         <i class="fas fa-user-tie"></i>
                         <h3>References</h3>
-                        <p>Academic and professional references</p>
+                        <p>Academic references</p>
                     </a>
                     <a href="contact.html" class="more-item">
                         <i class="fas fa-envelope"></i>
                         <h3>Contact Me</h3>
-                        <p>Get in touch and connect</p>
+                        <p>Contact information</p>
                     </a>
                 </div>
             </div>
