--- a/experiences.html
+++ b/experiences.html
@@ -20,18 +20,7 @@
                 <a href="experiences.html" class="active">Experiences</a>
                 <a href="projects.html">Projects</a>
                 <a href="publications.html">Publications</a>
-                <div class="dropdown">
-                    <a href="#" class="dropdown-toggle">More <i class="fa fa-caret-down"></i></a>
-                    <div class="dropdown-menu">
-                        <a href="skills.html">Skills</a>
-                        <a href="trainings.html">Trainings & Certifications</a>
-                        <a href="conferences.html">Conferences & Seminars</a>
-                        <a href="honors.html">Honors & Awards</a>
-                        <a href="affiliations.html">Professional Affiliations</a>
-                        <a href="references.html">References</a>
-                        <a href="contact.html">Contact Me</a>
-                    </div>
-                </div>
+                <a href="more.html">More <i class="fa fa-caret-down"></i></a>
             </nav>
         </div>
     </header>
