--- a/education.html
+++ b/education.html
@@ -25,6 +25,26 @@
         </div>
     </header>
     <main>
+        <section class="education-banner">
+            <div class="banner-content">
+                <div class="banner-text">
+                    <h1>EDUCATION</h1>
+                    <div class="banner-line"></div>
+                </div>
+                <div class="banner-graphics">
+                    <div class="graduation-cap">
+                        <div class="cap-base"></div>
+                        <div class="cap-top"></div>
+                        <div class="tassel"></div>
+                    </div>
+                    <div class="books">
+                        <div class="book book-1"></div>
+                        <div class="book book-2"></div>
+                        <div class="book book-3"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="education-section">
             <div class="section-title">EDUCATION</div>
             <div class="education-content">
