Update education information with new degrees and certificates

--- a/education.html
+++ b/education.html
@@ -50,40 +50,52 @@
             <div class="education-content">
                 <div class="education-item">
                     <div class="education-header">
-                        <h3 class="degree-title" contenteditable="true">Doctor of Veterinary Medicine (DVM)</h3>
-                        <span class="education-year" contenteditable="true">2019-2025</span>
+                        <h3 class="degree-title" contenteditable="true">Master of Science in Veterinary Public Health & Food Hygiene</h3>
+                        <span class="education-year" contenteditable="true">2025-Present</span>
                     </div>
-                    <div class="institution" contenteditable="true">Bangladesh Agricultural University, Mymensingh</div>
-                    <div class="education-description" contenteditable="true">Specialized in Veterinary Public Health & Food Hygiene</div>
+                    <div class="institution" contenteditable="true">Department of Microbiology & Hygiene, Bangladesh Agricultural University (BAU)</div>
+                    <div class="education-description" contenteditable="true">Semester: 1st (On Going)</div>
                 </div>
                 <div class="education-item">
                     <div class="education-header">
-                        <h3 class="degree-title" contenteditable="true">Master's in Public Health (MPH)</h3>
+                        <h3 class="degree-title" contenteditable="true">Postgraduate Diploma in Information & Communication Technology (PGD in ICT)</h3>
                         <span class="education-year" contenteditable="true">2025-Present</span>
                     </div>
-                    <div class="institution" contenteditable="true">Bangladesh Agricultural University, Mymensingh</div>
-                    <div class="education-description" contenteditable="true">Under the mentorship of Professor Dr. Mahbubul Pratik Siddique</div>
+                    <div class="institution" contenteditable="true">Bangladesh Agricultural University (BAU)</div>
+                    <div class="education-description" contenteditable="true">Semester: 1st (On Going)</div>
+                </div>
+                <div class="education-item">
+                    <div class="education-header">
+                        <h3 class="degree-title" contenteditable="true">Doctor of Veterinary Medicine (DVM)</h3>
+                        <span class="education-year" contenteditable="true">2019-2025</span>
+                    </div>
+                    <div class="institution" contenteditable="true">Faculty of Veterinary Science, Bangladesh Agricultural University (BAU)</div>
+                    <div class="education-description" contenteditable="true">CGPA: 3.010/4.00 | Passing year: 2025</div>
+                    <div class="education-description" contenteditable="true">Relevant Coursework: Anatomy and Histology, Physiology, Microbiology and Hygiene, Pharmacology, Parasitology, Pathology, Medicine, Surgery and Obstetrics</div>
+                </div>
+                <div class="education-item">
+                    <div class="education-header">
+                        <h3 class="degree-title" contenteditable="true">Higher Secondary Certificate (HSC)</h3>
+                        <span class="education-year" contenteditable="true">2015-2017</span>
+                    </div>
+                    <div class="institution" contenteditable="true">Chittagong College, Chattogram- 4000</div>
+                    <div class="education-description" contenteditable="true">GPA: 5.00/5.00 | Science Division</div>
+                </div>
+                <div class="education-item">
+                    <div class="education-header">
+                        <h3 class="degree-title" contenteditable="true">Secondary School Certificate (SSC)</h3>
+                        <span class="education-year" contenteditable="true">2015</span>
+                    </div>
+                    <div class="institution" contenteditable="true">Pomra Shahid Ziana High School, Chattogram - 4100</div>
+                    <div class="education-description" contenteditable="true">GPA: 5.00/5.00 | Science Division</div>
                 </div>
                 <div class="education-item">
                     <div class="education-header">
                         <h3 class="degree-title" contenteditable="true">Junior School Certificate (JSC)</h3>
                         <span class="education-year" contenteditable="true">2013</span>
                     </div>
-                    <div class="board" contenteditable="true">
-                        <a href="https://bise-ctg.portal.gov.bd/" target="_blank" class="board-link">
-                            <i class="fas fa-external-link-alt"></i> Chattogram
-                        </a>
-                    </div>
-                    <div class="institution" contenteditable="true">Rangunia Public School & College</div>
-                    <div class="education-description" contenteditable="true">GPA: 5.00/5.00 | Achievement: Education Board Scholarship (Talent Pool Category)</div>
-                </div>
-                <div class="education-item">
-                    <div class="education-header">
-                        <h3 class="degree-title" contenteditable="true">Additional Certifications</h3>
-                        <span class="education-year" contenteditable="true">2024</span>
-                    </div>
-                    <div class="institution" contenteditable="true">Online Course</div>
-                    <div class="education-description" contenteditable="true">Data Analysis & Visualization Using R</div>
+                    <div class="institution" contenteditable="true">Rangunia Public School & College, Chattogram - 4350</div>
+                    <div class="education-description" contenteditable="true">GPA: 5.00/5.00</div>
                 </div>
             </div>
         </section>
